--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
     margin:0%;
     padding: 0%;
 }
+html{
+    scroll-behavior: smooth;
+}
 body{
     width: 100%;
     background-color: #0f1014;
@@ -86,4 +89,90 @@ button.sub-button :hover{
     transition: 0.4s;
     cursor: pointer;
     box-shadow: rgba(25, 110, 190,0.6);
+}
+/******************************navbar ends*******************/
+/**************************slider**********************************/
+.caraousel-container{
+    margin-top: 80px;
+    position: relative;
+    display: flex;
+    width: 100%;
+    height: 600px;
+    overflow-x: hidden;
+    padding: 20px 0px 20px 0px;
+}
+.caraousel{
+    width: 92%;
+    height: 100%;
+    position: relative;
+    display: flex;
+}
+.slider{
+    flex:  0 0 auto;
+    margin-right: 30px;
+}
+/***********************slider ends**********************/
+/*******************************platforms**************************/
+
+.video-container{
+    position: relative;
+    width: 92%;
+    margin: auto;
+    height: 10vw;
+    display: flex;
+    margin: 20px;
+    justify-content: space-between;
+
+}
+
+.video-card{
+    position: relative;
+    min-width: calc(100%/5 - 10px);
+    width: calc(100%/5 - 10px);
+    height: 100%;
+    border-radius: 5px;
+    overflow: hidden;
+}
+
+.video-card-img,.card-video{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.video-card:hover .video-card-img{
+    display: none;
+
+}/*
+
+.video-container{
+    position: relative;
+    width: 92%;
+    margin: auto;
+    height: 10vw;
+    display: flex;
+    margin: 20px;
+    justify-content: space-between;
+}
+.video-card{
+    position: relative;
+    min-width: calc(100%/5- 10px);
+    width: calc(100%/5- 10px);
+    height: 100%;
+    border-radius: 5px;
+    overflow: hidden;
+}
+.video-card-img, .card-video{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    
+}
+.video-card:hover .video-card-img{
+    cursor: pointer;
+    display: hidden;
+}*/
+
+.rec{
+    margin-top: 95px;
 }
