--- a/style.css
+++ b/style.css
@@ -32,8 +32,9 @@ a{
     width: 100%;
     top: 0;
     left: 0;
+    
     background-color: #0f1014;
-    z-index: 0;
+    z-index: 1;
     /*website ke andar ya bahar*/
     display: flex;
     padding: 0px 36px 0px 36px;
@@ -73,9 +74,25 @@ nav .navbar{
     border-bottom: #e1e6f0 solid 1px;
     background: transparent;
     color: #9a9da3;
+    transition: 0.5s;
+}
+.search-box::after{
+    content: "";
+    width: 350px;
+    height: 30px;
+    border: none;
+    background: transparent;
+    border-bottom: #196ebe solid 1px;
+    transform: scaleX(0);
+    transform-origin: left;
+
+}
+.search-box::after:hover{
+    transform: scaleX(1);
 }
 button.sub-button{
     margin-left: 20px;
+    border: none;
     background: #196ebe;
     border-radius: 7px;
     padding: 6px 14px 6px 14px;
@@ -84,8 +101,8 @@ button.sub-button{
     font-weight: 500;
     color: #e1e6f0;
 }
-button.sub-button :hover{
-    
+.sub-button:hover{
+    box-shadow: 2px 0px 10px #0e2b46;
     transition: 0.4s;
     cursor: pointer;
     box-shadow: rgba(25, 110, 190,0.6);
@@ -142,8 +159,10 @@ button.sub-button :hover{
 
 .video-card:hover .video-card-img{
     display: none;
+    cursor: pointer;
 
-}/*
+}
+/*
 
 .video-container{
     position: relative;
@@ -156,8 +175,8 @@ button.sub-button :hover{
 }
 .video-card{
     position: relative;
-    min-width: calc(100%/5- 10px);
-    width: calc(100%/5- 10px);
+    min-width: calc(100%/5(ye seperate hona hai)- 10px);
+    width: calc(100%/5- 10px);(5- mai space aae ga)
     height: 100%;
     border-radius: 5px;
     overflow: hidden;
@@ -172,7 +191,140 @@ button.sub-button :hover{
     cursor: pointer;
     display: hidden;
 }*/
-
+/********************************movies recommended**********************/
 .rec{
+    font-size: 16px;
+    
+    font-family:Roboto, sans-serif;
+    padding-left: 37px;
+    position: relative;
     margin-top: 95px;
+}
+.card-container::-webkit-scrollbar{
+
+}
+.movies-list{
+    position: relative;
+}
+.card-container{
+    position: relative;
+    width: 100%;
+    height: 400px;
+    padding: 0px 0px 0px 80px;
+    display: flex;
+    justify-content: space-between;
+    overflow-x:hidden ;
+}
+.card{
+    min-width: 230px;
+    height: 300px;
+    overflow: hidden;
+    margin: auto;
+    border-radius: 5px;
+    transform: scale(1);
+    transition: 0.4s;
+    margin-right: 15px;
+}
+.src{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 5px;
+    z-index: inherit;
+   
+}
+.card-body{
+    opacity: 0;    
+    background-image: linear-gradient(to bottom, rgba(4,8,15,0), rgb(25, 33, 51) 90% );
+    height: 100%;
+    width: 100%;
+    padding: 10px;
+    transition: 0.4s;
+    position: absolute;
+    z-index: 2;
+    bottom: 0;
+    left: 0;
+}
+.name{
+    font-weight: 300;
+    position: relative;
+    text-transform: uppercase;
+    margin-top: 168px;
+    font-size: 15px;
+
+}
+
+
+.card:hover {
+    transform: scale(1.1);
+}
+.card:hover .card-body{
+    opacity: 1;
+}
+.watch-later{
+    position: relative;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 13px;
+    font-weight: lighter;
+    color:#9a9da3;
+    border: none;
+    background-color: transparent;
+    border-radius: 5px;
+    text-align: right;
+    width: 95%;
+    border: none;
+    font-weight: 100;
+    margin: 5px 0px;
+    padding: 10px 5px;
+    transition: 0.3s;
+}
+.watch-later::before{
+    content: "";
+    position: absolute;
+    
+    bottom: 0;
+    left: -5px;
+    width: 35px;
+    height: 35px;
+    background-image: url("images/add.png");
+    background-size: cover;
+    transform: scale(0.4);
+}
+.watch-later:hover{
+    background-color: rgba(154, 157, 163,0.1);
+    color: #e1e6f0;
+    cursor: pointer;
+}
+/*******************************movie recc ends***************************/
+/*************************scroll************************/
+.next{
+    position: absolute;
+    top: 170px;
+    right: 20px;
+    height: 60px;
+    z-index: 3;
+}
+.prv{
+    position: absolute;
+    top: 180px;
+    left: 20px;
+    height: 40px;
+    z-index: 3;
+}
+.prv, .next{
+    background-color: transparent;
+    object-fit: contain;
+    border: none;
+}
+.prv .img, .next .img{
+    height: 60px;
+}
+.prv{
+    display: none;
+}
+.next:active{
+    
+}
+.prv:hover, .next:hover{
+    cursor: pointer;
 }
