colour changed to blue

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ html{
 }
 body{
     width: 100%;
-    background-color: #0f1014;
+    background-color: #1837af;
     color: #e1e6f0;
     position: relative;
 }
